# excel-toolkit

./: .gitignore  LICENSE  README.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.4.0.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  lint.yml  test.yml  typecheck.yml
docs/: ERROR_CODES_REFERENCE.md  FEATURES.md  FP_MODULE_ARCHITECTURE.md  FP_PATTERNS.md  FUNCTIONAL_ANALYSIS.md  NEXT_STEPS.md  OPTION_STANDARDS.md  ORGANIZATION_GAPS.md  PHASE_3_DETAILED_SPEC.md  PROJECT_STRUCTURE.md  ROADMAP.md
docs/issues/: 001-file-loading-memory-issues.md  002-file-size-limits-too-permissive.md  003-merge-operations-memory-issues.md  004-join-cartesian-product-danger.md  005-groupby-performance-memory-issues.md  006-memory-monitoring-needed.md  007-filtering-performance-issues.md  008-functional-programming-overhead.md  009-data-type-optimization-needed.md  010-no-progress-feedback.md  011-eval-security-vulnerability.md  012-inconsistent-security-validation.md  013-no-input-sanitization.md  014-missing-integration-tests.md  015-tests-using-dangerous-patterns.md  016-tight-coupling-commands-operations.md  017-poor-error-messages.md  018-missing-help-context.md  019-debug-code-in-production.md  ERROR_HANDLING_ANALYSIS.md  ISSUES_PRIORITY_ANALYSIS.md  ISSUE_001_OPERATIONS_LAYER.md  MAIN.md  PHASE_1_DETAILED_SPEC.md  PHASE_2_DETAILED_SPEC.md  README.md
excel_toolkit/: __init__.py  cli.py  warnings_config.py
excel_toolkit/commands/: __init__.py  aggregate.py  append.py  calculate.py  clean.py  common.py  compare.py  convert.py  count.py  dedupe.py  export.py  extract.py  fill.py  filter.py  group.py  head.py  info.py  join.py  merge.py  pivot.py  rename.py  search.py  select.py  sort.py  stats.py  strip.py  tail.py  transform.py  unique.py  validate.py
excel_toolkit/core/: __init__.py  exceptions.py  file_handlers.py
excel_toolkit/fp/: __init__.py  _maybe.py  _result.py  immutable.py  maybe.py  result.py
excel_toolkit/models/: __init__.py  error_codes.py  error_types.py  error_utils.py
excel_toolkit/operations/: aggregating.py  cleaning.py  comparing.py  filtering.py  joining.py  pivoting.py  sorting.py  transforming.py  validation.py
tests/commands/: test_aggregate.py  test_append.py  test_clean.py  test_compare.py  test_convert.py  test_count.py  test_dedupe.py  test_export.py  test_fill.py  test_filter.py  test_group.py  test_head.py  test_info.py  test_join.py  test_merge.py  test_pivot.py  test_rename.py  test_search.py  test_select.py  test_sort.py  test_stats.py  test_strip.py  test_tail.py  test_transform.py  test_unique.py  test_validate.py
tests/properties/: __init__.py  test_functor_laws.py  test_monad_laws.py
tests/unit/: test_file_handlers.py  test_fp_maybe.py  test_fp_result.py
tests/unit/models/: test_error_types.py
tests/unit/operations/: test_aggregating.py  test_cleaning.py  test_comparing.py  test_filtering.py  test_joining.py  test_pivoting.py  test_sorting.py  test_transforming.py  test_validation.py
