[project]
name = "excel-toolkit-cwd"
version = "0.2.0"
description = "Command-line toolkit for Excel data manipulation and analysis"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Excel Toolkit Contributors"}
]
license = {text = "MIT"}
keywords = ["excel", "csv", "data", "cli", "pandas", "spreadsheet", "etl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = [
    "typer>=0.9.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "tabulate>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/AliiiBenn/excel-toolkit"
Repository = "https://github.com/AliiiBenn/excel-toolkit"
Documentation = "https://github.com/AliiiBenn/excel-toolkit/blob/main/README.md"
"Bug Tracker" = "https://github.com/AliiiBenn/excel-toolkit/issues"

[project.optional-dependencies]
parquet = [
    "pyarrow>=14.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "hypothesis>=6.0.0",
]

[project.scripts]
xl = "excel_toolkit.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["excel_toolkit"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "hypothesis>=6.150.2",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.11",
]
